# cds_bond_basis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
basis_data/: __init__.py  pipeline.py
notebooks/: bond_cds_basis.ipynb  create_bond_basis_excel.ipynb  testing.ipynb
output/: bond_cds_basis_summary.xlsm  bond_cds_basis_summary.xlsx  bond_cds_basis_summary_v1.xlsx  bond_cds_basis_summary_v2.xlsx  bond_cds_basis_summary_v3.xlsx  bond_cds_basis_summary_v4.xlsx  bond_cds_basis_summary_v5.xlsx  ~$bond_cds_basis_summary_v2.xlsx
slideshow/: __init__.py  config.py  plotting.py
