[project]
name = "cds-bond-basis"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Moore",email = "mmoore@hudsonbaycapital.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.5.1,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "bbg-utils @ file://hbnyfs01/shared/Structured%20Credit/Matt%20Stuff/claude_repos/bbg_utils",
    "databricks-utils @ file://hbnyfs01/shared/Structured%20Credit/Matt%20Stuff/claude_repos/databricks_utils",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]

[tool.poetry.dependencies]
bbg-utils = {develop = true}
databricks-utils = {develop = true}
